src/css/timelinestyle.css
/*--
Author: W3layouts
Author URL: http://w3layouts.com
License: Creative Commons Attribution 3.0 Unported
License URL: http://creativecommons.org/licenses/by/3.0/
--*/
ul,label{
	margin:0;
	padding:0;
}
body a:hover{
	text-decoration:none;
}
.header-left img {
    width: 100%;
    border: 5px solid rgba(255, 255, 255, 0.68);
}
.header-right {
    padding-left: 3em;
}
.header-right h1 {
    font-size: 2.5em;
    color: #fff;
    margin: 0.5em 0 0;
}
.header-right h2 {
    font-size: 1.2em;
    color: #000;
    background: white;
    display: inline-block;
    padding: .5em 1.5em;
    position: relative;
}
.header-right h2:before {
    width: 0;
    height: 0;
    position: absolute;
    content: '';
    bottom: -9px;
    left: 12px;
    border-style: solid;
    border-width: 10px 10px 0 10px;
    border-color: white transparent transparent transparent;
}
.header-right h6 {
    font-size: 1em;
    color: #C7C7C7;
    margin-top: 0.8em;
    letter-spacing: 6px;
}
ul.address {
    margin-top: 2em;
    border-top: 1px solid #AFAFAF;
    padding-top: 0.5em;
}
ul.address li {
    display: block;
}
ul.address li ul.address-text li {
    display: inline-block;
    font-size: 1.2em;
    color: #fff;
    margin-top: 1em;
	font-weight: 100;
}
ul.address li ul.address-text li:nth-child(1){
	width: 20%;
}
ul.address li ul.address-text li a {
    color: #fff;
	text-decoration:none;
}
ul.address li ul.address-text li a:hover{
    color: #0FF;
}
/*--//banner-top--*/
/*--top-nav--*/
.top-nav {
    background: black;
}
.nav > li {
    display: inline-block;
}
ul.nav.navbar {
    margin: 0;
    text-align: center;
}
ul.nav.navbar li a {
    color: #fff;
    padding: 1em 2em;
    font-size: 1.2em;
    font-family: 'Overlock', cursive;
}
ul.nav.navbar li a:hover,ul.nav.navbar li a.active,ul.nav.navbar li a:focus{
    color: black;
    background: #fff;
	-webkit-transform: scale(0.8);
	-moz-transform: scale(0.8);
    transform: scale(0.8);
	-o-transform: scale(0.8);
	-ms-transform: scale(0.8);
}
/*--//top-nav--*/
/*--about--*/
.about,.work,.education,.skills,.portfolio,.contact{
	padding:6em 0;
}
.about-me-quote{
    font-size: 1.5em;    
}
h3.title {
    font-size: 4em;
    text-align: center;
    color: black;
    border-bottom: 4px double rgba(247, 197, 106, 0.35);
    padding-bottom: 0.2em;
	margin-bottom: 1em;
}
p {
    font-size: 1em;
    color: #999;
    line-height: 1.8em;
}
.about-right {
    padding-left: 5em;
}
.about-right ul {
    border: 3px double black;
    padding: 1em 2em;
}
.about-right h5 {
    font-size: 2em;
    text-align: center;
    color: black;
}
.about-right ul li {
    display: block;
    color: #999;
    margin: 1em 0;
	font-size:1em;
}
.about-right ul li span.glyphicon {
    font-size: 0.8em;
	margin-right: 6px;
}
/*--//about--*/
/*--work--*/
.work {
    background: #DDDDDD;
}
.work-info {
    margin: 1em 0 0 0;
}
@media only screen and (max-device-width: 480px) {
    .work-info {
        margin: 1em 0;
    }
}
.work-left {
    text-align: right;
    padding: 3em 5em 0 0;
}
.work-right {
    border-left: 1px solid #999;
    padding: 2.5em 0 2em 6em;
    text-align: left;
}
.work-info h4 {
    font-size: 1.2em;
    background: black;
    display: inline-block;
    padding: .6em 1.2em;
    color: #fff;
    position: relative;
}

.work-right h4 {
	position:absolute;
    left: 4.8em;
}

.work-info h4:before {
    width: 0;
    height: 0;
    position: absolute;
	/*-- w3layouts --*/
    content: '';
    top: 9px;
    right: -14px;
    border-style: solid;
    border-width: 10px 0 10px 16px;
    border-color: transparent transparent transparent black;
}
.work-info h5 {
    font-size: 1.3em;
    color: black;
    margin-bottom: .5em;
    border: 1px solid black;
    display: inline-block;
    padding: 0 1.2em;
}
.work-info h5 span.glyphicon {
    font-size: 0.9em;
    color: #fff;
    background: black;
    padding: 1em;
    -webkit-border-radius: 70%;
    -moz-border-radius: 70%;
    border-radius: 70%;
    -webkit-transition: .5s all;
    -moz-transition: .5s all;
    transition: .5s all;
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    transform: scale(1);
    -o-transform: scale(1);
    -ms-transform: scale(1);
}
.work-right h5 span.glyphicon {
    margin-right: 5em;
    margin-left: -8em;
}
.work-left2 h5 span.glyphicon {
    margin-left: 4em;
    margin-right: -7.3em;
    z-index: 9;
}
.work-right.work-right2 {
    min-height: 210px;
    float: right;
}
.work-right.work-right2 h4:before {
    left: -14px;
	-webkit-transform: rotate(180deg);
	-moz-transform: rotate(180deg);
	/*-- agileits --*/
    transform: rotate(180deg);
	-o-transform: rotate(180deg);
	-ms-transform: rotate(180deg);
}
.work-right.work-right2 h4 {
    margin-top: 0.8em;
}
@media only screen and (max-device-width: 480px) {
    .work-right.work-right2 h4 {
        margin-top: -2em;
    }
    .work-info {
        margin: 2em 0;
    }
}
@media only screen and (max-device-width: 360px) {
    .work-right2 {
        position: relative;
        margin-right: 5em;
    }
}

.work-info:hover h5 span.glyphicon {
    color: white;
	-webkit-transform: scale(1.2);
	-moz-transform: scale(1.2);
    transform: scale(1.2);
	-o-transform: scale(1.2);
	-ms-transform: scale(1.2);
}
/*--//work--*/
/*--education--*/
.education .work-info h5 {
    color: #000;
}
/*--//education--*/
/*--skills--*/
.skills{
	background:#000;
}
.bar-grids {
    padding: 0 4em;
}
.progress {
    height: 10px;
    margin-bottom: 2.2em;
    background-color: #2F2C06;
}
.progress-bar { 
    background-color: #766E04;
}
.bar-grids h6 {
    font-size: 1.1em;
    color: #fff;
    margin-bottom: 0.6em;
}
.bar-grids h6 span {
    float: right;
    font-size: 0.9em;
}
/*--//skills--*/
/*--portfolio--*/
/*--SAP--*/
ul.resp-tabs-list {  
/*-- w3layouts --*/
background: white;
}
.sap_tabs{
	clear:both;
	padding: 0;
}
.tab_box{
	background:#fd926d;
	padding: 2em;
}
.top1{
	margin-top: 2%;
}
/* ... */

